2007-10-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy.mdp: Added internal dbus-sharp files to MD solution, mostly just
	  for autocomplete convenience.

2007-10-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Addins/Bugzilla/BugzillaNoteAddin.cs: Removing extraneous debug
	  statements.

2007-10-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Addins/Bugzilla/BugzillaNoteAddin.cs: Removing extraneous debug
	  statement.

2007-10-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/NoteManager.cs: Backing out fix for bug #449478.  Now the body of
	  the note content is always selected when creating a new note (title is
	  never automatically selected).  This restores the original behavior that
	  people seem to prefer.

2007-10-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Watchers.cs, Tomboy/NoteWindow.cs: Use Buffer.GetSlice () instead
	  of Buffer.GetText () because the GetSlice call accounts for
	  non-character items in the buffer such as pixbufs and widgets.

2007-09-16  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* help/C/figures/tomboy-preferences-synchronization.png: Forgot to add
	  this earlier (thanks to Daniel Nylander for catching this!).

2007-09-16  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* help/C/figures/tomboy-preferences-hotkeys.png,
	  help/C/figures/tomboy-main-menu.png,
	  help/C/figures/tomboy-new-note.png,
	  help/C/figures/tomboy-preferences-add-ins.png,
	  help/C/figures/tomboy-panel.png,
	  help/C/figures/tomboy-preferences-plugins.png,
	  help/C/figures/tomboy-preferences-editing.png, help/C/tomboy.xml:
	  Updated all screenshots for help documentation.  Replaced
	  tomboy-preferences-plugins.png with tomboy-preferences-addins.png,
	  and also added tomboy-preferences-synchronization.png.

2007-09-16  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* help/C/tomboy.xml: GDP-recommended use of terms like "drop-down list"